--- a/public/web/primeri/index.html
+++ b/public/web/primeri/index.html
@@ -212,6 +212,11 @@
                 <br><br>
                 Primer sa input type="range", promenom pozadine i sa promenom vrednosti na slučajne brojeve. Pokazana su dva primera dobijanja nasumičnih vrednosti.
             </div>
+            <div class="card" onclick="window.open('primer10/index.html?ime=Petar&prezime=Petrovic&ocena=4&predmet=matematika')">
+                <b class="naziv">Primer 10</b>
+                <br><br>
+                Primer sa URL parametrima. Postavljene parametare u okviru link URL-a možete pročitati korišćenjem JavaScript-a.
+            </div>
             <div class="card" onclick="window.open('asocijacije/index.html')">
                 <b class="naziv">Asocijacije</b>
                 <br><br>
@@ -254,6 +259,9 @@
             </div>
             <div class="cardmini" onclick="window.open('files/primer9.zip')">
                 Primer9.zip
+            </div>
+            <div class="cardmini" onclick="window.open('files/primer10.zip')">
+                Primer10.zip
             </div>
             <div class="cardmini" onclick="window.open('files/asocijacije.zip')">
                 asocijacije.zip
