--- a/public/web/primeri/index.html
+++ b/public/web/primeri/index.html
@@ -217,6 +217,11 @@
                 <br><br>
                 Primer sa URL parametrima. Postavljene parametare u okviru link URL-a možete pročitati korišćenjem JavaScript-a.
             </div>
+            <div class="card" onclick="window.open('primer11/index.html')">
+                <b class="naziv">Primer 11</b>
+                <br><br>
+                Primer sa 3 slideshow-a slika.
+            </div>
             <div class="card" onclick="window.open('asocijacije/index.html')">
                 <b class="naziv">Asocijacije</b>
                 <br><br>
@@ -262,6 +267,9 @@
             </div>
             <div class="cardmini" onclick="window.open('files/primer10.zip')">
                 Primer10.zip
+            </div>
+            <div class="cardmini" onclick="window.open('files/primer11.zip')">
+                Primer11.zip
             </div>
             <div class="cardmini" onclick="window.open('files/asocijacije.zip')">
                 asocijacije.zip
