--- a/public/web/index.html
+++ b/public/web/index.html
@@ -63,12 +63,12 @@
 					</a>
 					<div class="naslovMaterijali">MATERIJALI</div>
 
-					<a href="https://www.w3schools.com/" target="_blank" title="W3Schools" class="hoveringA">
+					<a href="competition.html" target="_blank" title="W3Schools" class="hoveringA">
 						<div class="linksDiv">
-							<img src="w3.png" class="linkIcon" alt="W3Schools">
-							<span class="linksTitle">W3Schools</span>
+							<img src="competition.svg" class="linkIcon" alt="competition">
+							<span class="linksTitle">Takmičenje</span>
 							<span class="linksText">
-								Pristup W3Schools platformi. Ovde možete učiti i vežbati jezike koje učimo, ali i druge jezike.
+								Pristup svim sajtovima za takmičenje.
 							</span>
 						</div>
 					</a>
