--- a/public/web/competition.html
+++ b/public/web/competition.html
@@ -196,6 +196,14 @@
                 </span>
                 <span class="name">Dušan Lađević</span>
             </div>
+            <div class="card" onclick="window.open('https:\/\/icer-test3-29719.web.app')">
+                <b>Moj prvi sajt</b>
+                <img src="files/6.jpg">
+                <span>
+                    Primer prvog sajta.
+                </span>
+                <span class="name">Vladan Žebeljan</span>
+            </div>
            
         </div>
         <br><br><br>
