--- a/public/web/competition.html
+++ b/public/web/competition.html
@@ -198,7 +198,7 @@
             </div>
             <div class="card" onclick="window.open('https:\/\/icer-test3-29719.web.app')">
                 <b>Moj prvi sajt</b>
-                <img src="files/6.jpg">
+                <img src="files/7.jpg">
                 <span>
                     Primer prvog sajta.
                 </span>
@@ -256,6 +256,14 @@
                     Sajt sa omiljenim filmovima.
                 </span>
                 <span class="name">Milica Dabić</span>
+            </div>
+            <div class="card" onclick="window.open('files/vasilije/index.html')">
+                <b>Shooz</b>
+                <img src="files/s7.jpg">
+                <span>
+                    Prodavnica obuće i odeće.
+                </span>
+                <span class="name">Vasilije Bogić</span>
             </div>
         </div>
     </div>
